2008-05-27  Michael Natterer  <mitch@imendio.com>

	Fix and simplify definition of GDK_PIXBUF_VAR:

	* Makefile.am: add -DGDK_PIXBUF_COMPILATION to INCLUDES.

	* gdk-pixbuf.c: don't #define it here. Remove GDK_PIXBUF_VAR from
	the definition of the version variables.

	* gdk-pixbuf-features.h.in: in the !G_PLATFORM_WIN32 case, always
	define GDK_PIXBUF_VAR to "extern". Remove redundant #ifndef
	GDK_PIXBUF_VAR around the whole block, the header itself already
	has include guards.

2008-05-12  Tor Lillqvist  <tml@novell.com>

	Bug 532558 - Cannot build dll when using separate builddir

	* Makefile.am: .def file belongs in $(srcdir). Patch by Marko
	Lindqvist.

2008-05-02  Michael Natterer  <mitch@imendio.com>

	* Makefile.am (stamp-gdk-pixbuf-marshal.h): deprecate the entire
	gdk-pixbuf-marshal.h since it's installed by accident only and
	shouldn't be used by anybody.

2008-03-21  Tor Lillqvist  <tml@novell.com>

	Import the GDI+ gdk-pixbuf loaders for Windows by Dominic
	Lachowicz and Alberto Ruiz into the GTK+ tree, from the
	gdip-pixbuf-loader module.

	* Makefile.am: Add the bits and pieces for the GDI+ loaders. When
	building GDI+ loaders don't build the traditional ones for the
	same formats. Always build the traditional PNG loader, though, as
	it isn't possible to read and write PNG tEXt chunks through GDI+,
	and GIMP at least needs that functionality in the gdk-pixbuf PNG
	loader. 

	Either build all the GDI+ loaders (except the PNG one) into
	libgdk-pixbuf, or build them all as DLLs. I don't see any reason
	to enable cherry-picking among them whether to build in or not.

	* io-gdip-animation.c
	* io-gdip-animation.h
	* io-gdip-bmp.c
	* io-gdip-emf.c
	* io-gdip-gif.c
	* io-gdip-ico.c
	* io-gdip-jpeg.c
	* io-gdip-native.h
	* io-gdip-png.c
	* io-gdip-propertytags.h
	* io-gdip-tiff.c
	* io-gdip-utils.c
	* io-gdip-utils.h
	* io-gdip-wmf.c: New files. Note that io-gdip-png.c is not
	currently used.

	* gdk-pixbuf-io.c: Add the bits and pieces for built-in GDI+