@@ -1,5 +1,13 @@
 2008-05-27  Michael Natterer  <mitch@imendio.com>
 
+	* gdk-pixbuf.c: put back the #define, but call it
+	GDK_PIXBUF_C_COMPILATION.
+
+	* gdk-pixbuf-features.h.in: make variable export depend on that
+	define instead of GDK_PIXBUF_COMPILATION.
+
+2008-05-27  Michael Natterer  <mitch@imendio.com>
+
 	Fix and simplify definition of GDK_PIXBUF_VAR:
 
 	* Makefile.am: add -DGDK_PIXBUF_COMPILATION to INCLUDES.
